source/ocvWrp_nativeClasses_signatures.h

Size_t*   pCvSizeCreate();

void     pCvSizeDelete( Size_t* wrapper);

void     pCvSizeToStruct( Size_t* wrapper, CvSizeS* dest);

void     pCvSizeFromStruct( Size_t* wrapper, CvSizeS* dest);

Rect_t*   pCvRectCreate();

void     pCvRectDelete( Rect_t* wrapper);

void     pCvRectToStruct( Rect_t* wrapper, CvRectS* dest);

void     pCvRectFromStruct( Rect_t* wrapper, CvRectS* dest);

Range_t*   pCvRangeCreate();

void     pCvRangeDelete( Range_t* wrapper);

void     pCvRangeToStruct( Range_t* wrapper, CvRangeS* dest);

void     pCvRangeFromStruct( Range_t* wrapper, CvRangeS* dest);

CvSlice_t*   pCvCvSliceCreate();

void     pCvCvSliceDelete( CvSlice_t* wrapper);

void     pCvCvSliceToStruct( CvSlice_t* wrapper, CvSliceS* dest);

void     pCvCvSliceFromStruct( CvSlice_t* wrapper, CvSliceS* dest);

Point_t*   pCvPointCreate();

void     pCvPointDelete( Point_t* wrapper);

void     pCvPointToStruct( Point_t* wrapper, CvPointS* dest);

void     pCvPointFromStruct( Point_t* wrapper, CvPointS* dest);

Point2f_t*   pCvPoint2fCreate();

void     pCvPoint2fDelete( Point2f_t* wrapper);

void     pCvPoint2fToStruct( Point2f_t* wrapper, CvPoint2fS* dest);

void     pCvPoint2fFromStruct( Point2f_t* wrapper, CvPoint2fS* dest);

Point2d_t*   pCvPoint2dCreate();

void     pCvPoint2dDelete( Point2d_t* wrapper);

void     pCvPoint2dToStruct( Point2d_t* wrapper, CvPoint2dS* dest);

void     pCvPoint2dFromStruct( Point2d_t* wrapper, CvPoint2dS* dest);

Vec2d_t*   pCvVec2dCreate();

void     pCvVec2dDelete( Vec2d_t* wrapper);

void     pCvVec2dToStruct( Vec2d_t* wrapper, CvVec2dS* dest);

void     pCvVec2dFromStruct( Vec2d_t* wrapper, CvVec2dS* dest);

Vec3d_t*   pCvVec3dCreate();

void     pCvVec3dDelete( Vec3d_t* wrapper);

void     pCvVec3dToStruct( Vec3d_t* wrapper, CvVec3dS* dest);

void     pCvVec3dFromStruct( Vec3d_t* wrapper, CvVec3dS* dest);

Vec3b_t*   pCvVec3bCreate();

void     pCvVec3bDelete( Vec3b_t* wrapper);

void     pCvVec3bToStruct( Vec3b_t* wrapper, CvVec3bS* dest);

void     pCvVec3bFromStruct( Vec3b_t* wrapper, CvVec3bS* dest);

Vec4f_t*   pCvVec4fCreate();

void     pCvVec4fDelete( Vec4f_t* wrapper);

void     pCvVec4fToStruct( Vec4f_t* wrapper, CvVec4fS* dest);

void     pCvVec4fFromStruct( Vec4f_t* wrapper, CvVec4fS* dest);

Vec6f_t*   pCvVec6fCreate();

void     pCvVec6fDelete( Vec6f_t* wrapper);

void     pCvVec6fToStruct( Vec6f_t* wrapper, CvVec6fS* dest);

void     pCvVec6fFromStruct( Vec6f_t* wrapper, CvVec6fS* dest);

Scalar_t*   pCvScalarCreate();

void     pCvScalarDelete( Scalar_t* wrapper);

void     pCvScalarToStruct( Scalar_t* wrapper, CvScalarS* dest);

void     pCvScalarFromStruct( Scalar_t* wrapper, CvScalarS* dest);

RotatedRect_t*   pCvRotatedRectCreate();

void     pCvRotatedRectDelete( RotatedRect_t* wrapper);

void     pCvRotatedRectToStruct( RotatedRect_t* wrapper, CvRotatedRectS* dest);

void     pCvRotatedRectFromStruct( RotatedRect_t* wrapper, CvRotatedRectS* dest);

TermCriteria_t*   pCvTermCriteriaCreate();

void     pCvTermCriteriaDelete( TermCriteria_t* wrapper);

void     pCvTermCriteriaToStruct( TermCriteria_t* wrapper, CvTermCriteriaS* dest);

void     pCvTermCriteriaFromStruct( TermCriteria_t* wrapper, CvTermCriteriaS* dest);

CvTermCriteria_t*   pCvCvTermCriteriaCreate();

void     pCvCvTermCriteriaDelete( CvTermCriteria_t* wrapper);

void     pCvCvTermCriteriaToStruct( CvTermCriteria_t* wrapper, CvTermCriteriaS* dest);

void     pCvCvTermCriteriaFromStruct( CvTermCriteria_t* wrapper, CvTermCriteriaS* dest);

Moments_t*   pCvMomentsCreate();

void     pCvMomentsDelete( Moments_t* wrapper);

void     pCvMomentsToStruct( Moments_t* wrapper, CvMomentsS* dest);

void     pCvMomentsFromStruct( Moments_t* wrapper, CvMomentsS* dest);

IndexParams_t*   pCvIndexParamsCreate();

void     pCvIndexParamsDelete( IndexParams_t* wrapper);

SearchParams_t*   pCvSearchParamsCreate();

void     pCvSearchParamsDelete( SearchParams_t* wrapper);

LayerId_t*   pCvLayerIdCreate();

void     pCvLayerIdDelete( LayerId_t* wrapper);

RNG_t*   pCvRNGCreate();

void     pCvRNGDelete( RNG_t* wrapper);

Size2f_t*   pCvSize2fCreate();

void     pCvSize2fDelete( Size2f_t* wrapper);

void     pCvSize2fToStruct( Size2f_t* wrapper, CvSize2fS* dest);

void     pCvSize2fFromStruct( Size2f_t* wrapper, CvSize2fS* dest);

Vec2i_t*   pCvVec2iCreate();

void     pCvVec2iDelete( Vec2i_t* wrapper);

void     pCvVec2iToStruct( Vec2i_t* wrapper, CvVec2iS* dest);

void     pCvVec2iFromStruct( Vec2i_t* wrapper, CvVec2iS* dest);

Vec3i_t*   pCvVec3iCreate();

void     pCvVec3iDelete( Vec3i_t* wrapper);

void     pCvVec3iToStruct( Vec3i_t* wrapper, CvVec3iS* dest);

void     pCvVec3iFromStruct( Vec3i_t* wrapper, CvVec3iS* dest);

Rect2d_t*   pCvRect2dCreate();

void     pCvRect2dDelete( Rect2d_t* wrapper);

void     pCvRect2dToStruct( Rect2d_t* wrapper, CvRect2dS* dest);

void     pCvRect2dFromStruct( Rect2d_t* wrapper, CvRect2dS* dest);
MatShape*   pCvMatShapeCreate(int n);

void   pCvMatShapeDelete(MatShape* wrapper);

int   pCvMatShapeLength(MatShape* wrapper);

int   pCvMatShapeGet(MatShape* wrapper, int index);

int   pCvMatShapeSet(MatShape* wrapper, int index, int value);

vector_CameraParams*   pCvVectordetail_CameraParamsCreate(int n);

void   pCvVectordetail_CameraParamsDelete(vector_CameraParams* wrapper);

int   pCvVectordetail_CameraParamsLength(vector_CameraParams* wrapper);

detail_CameraParams_t*   pCvVectordetail_CameraParamsGet(vector_CameraParams* wrapper, int index);

detail_CameraParams_t*   pCvVectordetail_CameraParamsSet(vector_CameraParams* wrapper, int index, detail_CameraParams_t* value);

vector_DMatch*   pCvVectorDMatchCreate(int n);

void   pCvVectorDMatchDelete(vector_DMatch* wrapper);

int   pCvVectorDMatchLength(vector_DMatch* wrapper);

DMatch_t*   pCvVectorDMatchGet(vector_DMatch* wrapper, int index);

DMatch_t*   pCvVectorDMatchSet(vector_DMatch* wrapper, int index, DMatch_t* value);

vector_ImageFeatures*   pCvVectordetail_ImageFeaturesCreate(int n);

void   pCvVectordetail_ImageFeaturesDelete(vector_ImageFeatures* wrapper);

int   pCvVectordetail_ImageFeaturesLength(vector_ImageFeatures* wrapper);

detail_ImageFeatures_t*   pCvVectordetail_ImageFeaturesGet(vector_ImageFeatures* wrapper, int index);

detail_ImageFeatures_t*   pCvVectordetail_ImageFeaturesSet(vector_ImageFeatures* wrapper, int index, detail_ImageFeatures_t* value);

vector_KeyPoint*   pCvVectorKeyPointCreate(int n);

void   pCvVectorKeyPointDelete(vector_KeyPoint* wrapper);

int   pCvVectorKeyPointLength(vector_KeyPoint* wrapper);

KeyPoint_t*   pCvVectorKeyPointGet(vector_KeyPoint* wrapper, int index);

KeyPoint_t*   pCvVectorKeyPointSet(vector_KeyPoint* wrapper, int index, KeyPoint_t* value);

vector_Mat*   pCvVectorMatCreate(int n);

void   pCvVectorMatDelete(vector_Mat* wrapper);

int   pCvVectorMatLength(vector_Mat* wrapper);

Mat_t*   pCvVectorMatGet(vector_Mat* wrapper, int index);

Mat_t*   pCvVectorMatSet(vector_Mat* wrapper, int index, Mat_t* value);

vector_MatShape*   pCvVectorMatShapeCreate(int n);

void   pCvVectorMatShapeDelete(vector_MatShape* wrapper);

int   pCvVectorMatShapeLength(vector_MatShape* wrapper);

MatShape*   pCvVectorMatShapeGet(vector_MatShape* wrapper, int index);

MatShape*   pCvVectorMatShapeSet(vector_MatShape* wrapper, int index, MatShape* value);

vector_MatchesInfo*   pCvVectordetail_MatchesInfoCreate(int n);

void   pCvVectordetail_MatchesInfoDelete(vector_MatchesInfo* wrapper);

int   pCvVectordetail_MatchesInfoLength(vector_MatchesInfo* wrapper);

detail_MatchesInfo_t*   pCvVectordetail_MatchesInfoGet(vector_MatchesInfo* wrapper, int index);

detail_MatchesInfo_t*   pCvVectordetail_MatchesInfoSet(vector_MatchesInfo* wrapper, int index, detail_MatchesInfo_t* value);

vector_Point*   pCvVectorPointCreate(int n);

void   pCvVectorPointDelete(vector_Point* wrapper);

int   pCvVectorPointLength(vector_Point* wrapper);

Point_t*   pCvVectorPointGet(vector_Point* wrapper, int index);

Point_t*   pCvVectorPointSet(vector_Point* wrapper, int index, Point_t* value);

void   pCvVectorPointToArray(vector_Point* wrapper, CvPointS* outstructs);

void   pCvVectorPointFromArray(vector_Point* wrapper, CvPointS* inpstructs);

vector_Point2f*   pCvVectorPoint2fCreate(int n);

void   pCvVectorPoint2fDelete(vector_Point2f* wrapper);