Delphi/unOcvWrapper_nativeClasses.pas

Function    pCvSizeCreate(): PCvSize_t; cdecl;
Procedure   pCvSizeDelete(const wrapper: PCvSize_t); cdecl;
Procedure   pCvSizeToStruct(const wrapper: PCvSize_t; const dest: PCvSizeS); cdecl;
Procedure   pCvSizeFromStruct(const wrapper: PCvSize_t; const src: PCvSizeS); cdecl;
Function    pCvRectCreate(): PCvRect_t; cdecl;
Procedure   pCvRectDelete(const wrapper: PCvRect_t); cdecl;
Procedure   pCvRectToStruct(const wrapper: PCvRect_t; const dest: PCvRectS); cdecl;
Procedure   pCvRectFromStruct(const wrapper: PCvRect_t; const src: PCvRectS); cdecl;
Function    pCvRangeCreate(): PCvRange_t; cdecl;
Procedure   pCvRangeDelete(const wrapper: PCvRange_t); cdecl;
Procedure   pCvRangeToStruct(const wrapper: PCvRange_t; const dest: PCvRangeS); cdecl;
Procedure   pCvRangeFromStruct(const wrapper: PCvRange_t; const src: PCvRangeS); cdecl;
Function    pCvCvSliceCreate(): PCvCvSlice_t; cdecl;
Procedure   pCvCvSliceDelete(const wrapper: PCvCvSlice_t); cdecl;
Procedure   pCvCvSliceToStruct(const wrapper: PCvCvSlice_t; const dest: PCvSliceS); cdecl;
Procedure   pCvCvSliceFromStruct(const wrapper: PCvCvSlice_t; const src: PCvSliceS); cdecl;
Function    pCvPointCreate(): PCvPoint_t; cdecl;
Procedure   pCvPointDelete(const wrapper: PCvPoint_t); cdecl;
Procedure   pCvPointToStruct(const wrapper: PCvPoint_t; const dest: PCvPointS); cdecl;
Procedure   pCvPointFromStruct(const wrapper: PCvPoint_t; const src: PCvPointS); cdecl;
Function    pCvPoint2fCreate(): PCvPoint2f_t; cdecl;
Procedure   pCvPoint2fDelete(const wrapper: PCvPoint2f_t); cdecl;
Procedure   pCvPoint2fToStruct(const wrapper: PCvPoint2f_t; const dest: PCvPoint2fS); cdecl;
Procedure   pCvPoint2fFromStruct(const wrapper: PCvPoint2f_t; const src: PCvPoint2fS); cdecl;
Function    pCvPoint2dCreate(): PCvPoint2d_t; cdecl;
Procedure   pCvPoint2dDelete(const wrapper: PCvPoint2d_t); cdecl;
Procedure   pCvPoint2dToStruct(const wrapper: PCvPoint2d_t; const dest: PCvPoint2dS); cdecl;
Procedure   pCvPoint2dFromStruct(const wrapper: PCvPoint2d_t; const src: PCvPoint2dS); cdecl;
Function    pCvVec2dCreate(): PCvVec2d_t; cdecl;
Procedure   pCvVec2dDelete(const wrapper: PCvVec2d_t); cdecl;
Procedure   pCvVec2dToStruct(const wrapper: PCvVec2d_t; const dest: PCvVec2dS); cdecl;
Procedure   pCvVec2dFromStruct(const wrapper: PCvVec2d_t; const src: PCvVec2dS); cdecl;
Function    pCvVec3dCreate(): PCvVec3d_t; cdecl;
Procedure   pCvVec3dDelete(const wrapper: PCvVec3d_t); cdecl;
Procedure   pCvVec3dToStruct(const wrapper: PCvVec3d_t; const dest: PCvVec3dS); cdecl;
Procedure   pCvVec3dFromStruct(const wrapper: PCvVec3d_t; const src: PCvVec3dS); cdecl;
Function    pCvVec3bCreate(): PCvVec3b_t; cdecl;
Procedure   pCvVec3bDelete(const wrapper: PCvVec3b_t); cdecl;
Procedure   pCvVec3bToStruct(const wrapper: PCvVec3b_t; const dest: PCvVec3bS); cdecl;
Procedure   pCvVec3bFromStruct(const wrapper: PCvVec3b_t; const src: PCvVec3bS); cdecl;
Function    pCvVec4fCreate(): PCvVec4f_t; cdecl;
Procedure   pCvVec4fDelete(const wrapper: PCvVec4f_t); cdecl;
Procedure   pCvVec4fToStruct(const wrapper: PCvVec4f_t; const dest: PCvVec4fS); cdecl;
Procedure   pCvVec4fFromStruct(const wrapper: PCvVec4f_t; const src: PCvVec4fS); cdecl;
Function    pCvVec6fCreate(): PCvVec6f_t; cdecl;
Procedure   pCvVec6fDelete(const wrapper: PCvVec6f_t); cdecl;
Procedure   pCvVec6fToStruct(const wrapper: PCvVec6f_t; const dest: PCvVec6fS); cdecl;
Procedure   pCvVec6fFromStruct(const wrapper: PCvVec6f_t; const src: PCvVec6fS); cdecl;
Function    pCvScalarCreate(): PCvScalar_t; cdecl;
Procedure   pCvScalarDelete(const wrapper: PCvScalar_t); cdecl;
Procedure   pCvScalarToStruct(const wrapper: PCvScalar_t; const dest: PCvScalarS); cdecl;
Procedure   pCvScalarFromStruct(const wrapper: PCvScalar_t; const src: PCvScalarS); cdecl;
Function    pCvRotatedRectCreate(): PCvRotatedRect_t; cdecl;
Procedure   pCvRotatedRectDelete(const wrapper: PCvRotatedRect_t); cdecl;
Procedure   pCvRotatedRectToStruct(const wrapper: PCvRotatedRect_t; const dest: PCvRotatedRectS); cdecl;
Procedure   pCvRotatedRectFromStruct(const wrapper: PCvRotatedRect_t; const src: PCvRotatedRectS); cdecl;
Function    pCvTermCriteriaCreate(): PCvTermCriteria_t; cdecl;
Procedure   pCvTermCriteriaDelete(const wrapper: PCvTermCriteria_t); cdecl;
Procedure   pCvTermCriteriaToStruct(const wrapper: PCvTermCriteria_t; const dest: PCvTermCriteriaS); cdecl;
Procedure   pCvTermCriteriaFromStruct(const wrapper: PCvTermCriteria_t; const src: PCvTermCriteriaS); cdecl;
Function    pCvCvTermCriteriaCreate(): PCvCvTermCriteria_t; cdecl;
Procedure   pCvCvTermCriteriaDelete(const wrapper: PCvCvTermCriteria_t); cdecl;
Procedure   pCvCvTermCriteriaToStruct(const wrapper: PCvCvTermCriteria_t; const dest: PCvTermCriteriaS); cdecl;
Procedure   pCvCvTermCriteriaFromStruct(const wrapper: PCvCvTermCriteria_t; const src: PCvTermCriteriaS); cdecl;
Function    pCvMomentsCreate(): PCvMoments_t; cdecl;
Procedure   pCvMomentsDelete(const wrapper: PCvMoments_t); cdecl;
Procedure   pCvMomentsToStruct(const wrapper: PCvMoments_t; const dest: PCvMomentsS); cdecl;
Procedure   pCvMomentsFromStruct(const wrapper: PCvMoments_t; const src: PCvMomentsS); cdecl;
Function    pCvIndexParamsCreate(): PCvIndexParams_t; cdecl;
Procedure   pCvIndexParamsDelete(const wrapper: PCvIndexParams_t); cdecl;
Function    pCvSearchParamsCreate(): PCvSearchParams_t; cdecl;
Procedure   pCvSearchParamsDelete(const wrapper: PCvSearchParams_t); cdecl;
Function    pCvLayerIdCreate(): PCvLayerId_t; cdecl;
Procedure   pCvLayerIdDelete(const wrapper: PCvLayerId_t); cdecl;
Function    pCvRNGCreate(): PCvRNG_t; cdecl;
Procedure   pCvRNGDelete(const wrapper: PCvRNG_t); cdecl;
Function    pCvSize2fCreate(): PCvSize2f_t; cdecl;
Procedure   pCvSize2fDelete(const wrapper: PCvSize2f_t); cdecl;
Procedure   pCvSize2fToStruct(const wrapper: PCvSize2f_t; const dest: PCvSize2fS); cdecl;
Procedure   pCvSize2fFromStruct(const wrapper: PCvSize2f_t; const src: PCvSize2fS); cdecl;
Function    pCvVec2iCreate(): PCvVec2i_t; cdecl;
Procedure   pCvVec2iDelete(const wrapper: PCvVec2i_t); cdecl;
Procedure   pCvVec2iToStruct(const wrapper: PCvVec2i_t; const dest: PCvVec2iS); cdecl;
Procedure   pCvVec2iFromStruct(const wrapper: PCvVec2i_t; const src: PCvVec2iS); cdecl;
Function    pCvVec3iCreate(): PCvVec3i_t; cdecl;
Procedure   pCvVec3iDelete(const wrapper: PCvVec3i_t); cdecl;
Procedure   pCvVec3iToStruct(const wrapper: PCvVec3i_t; const dest: PCvVec3iS); cdecl;
Procedure   pCvVec3iFromStruct(const wrapper: PCvVec3i_t; const src: PCvVec3iS); cdecl;
Function    pCvRect2dCreate(): PCvRect2d_t; cdecl;
Procedure   pCvRect2dDelete(const wrapper: PCvRect2d_t); cdecl;
Procedure   pCvRect2dToStruct(const wrapper: PCvRect2d_t; const dest: PCvRect2dS); cdecl;
Procedure   pCvRect2dFromStruct(const wrapper: PCvRect2d_t; const src: PCvRect2dS); cdecl;
Function    pCvMatShapeCreate(const n: Integer): PCvMatShape; cdecl;
Procedure   pCvMatShapeDelete(const wrapper: PCvMatShape); cdecl;
Function    pCvMatShapeLength(const wrapper: PCvMatShape): Integer; cdecl;
Function    pCvMatShapeGet(const wrapper: PCvMatShape; const index: Integer): Integer; cdecl;
Function    pCvMatShapeSet(const wrapper: PCvMatShape; const index: Integer; const val: Integer): Integer; cdecl;
Function    pCvVectordetail_CameraParamsCreate(const n: Integer): PCvvector_CameraParams; cdecl;
Procedure   pCvVectordetail_CameraParamsDelete(const wrapper: PCvvector_CameraParams); cdecl;
Function    pCvVectordetail_CameraParamsLength(const wrapper: PCvvector_CameraParams): Integer; cdecl;
Function    pCvVectordetail_CameraParamsGet(const wrapper: PCvvector_CameraParams; const index: Integer): PCvdetail_CameraParams_t; cdecl;
Function    pCvVectordetail_CameraParamsSet(const wrapper: PCvvector_CameraParams; const index: Integer; const val: PCvdetail_CameraParams_t): PCvdetail_CameraParams_t; cdecl;
Function    pCvVectorDMatchCreate(const n: Integer): PCvvector_DMatch; cdecl;
Procedure   pCvVectorDMatchDelete(const wrapper: PCvvector_DMatch); cdecl;
Function    pCvVectorDMatchLength(const wrapper: PCvvector_DMatch): Integer; cdecl;
Function    pCvVectorDMatchGet(const wrapper: PCvvector_DMatch; const index: Integer): PCvDMatch_t; cdecl;
Function    pCvVectorDMatchSet(const wrapper: PCvvector_DMatch; const index: Integer; const val: PCvDMatch_t): PCvDMatch_t; cdecl;
Function    pCvVectordetail_ImageFeaturesCreate(const n: Integer): PCvvector_ImageFeatures; cdecl;
Procedure   pCvVectordetail_ImageFeaturesDelete(const wrapper: PCvvector_ImageFeatures); cdecl;
Function    pCvVectordetail_ImageFeaturesLength(const wrapper: PCvvector_ImageFeatures): Integer; cdecl;
Function    pCvVectordetail_ImageFeaturesGet(const wrapper: PCvvector_ImageFeatures; const index: Integer): PCvdetail_ImageFeatures_t; cdecl;
Function    pCvVectordetail_ImageFeaturesSet(const wrapper: PCvvector_ImageFeatures; const index: Integer; const val: PCvdetail_ImageFeatures_t): PCvdetail_ImageFeatures_t; cdecl;
Function    pCvVectorKeyPointCreate(const n: Integer): PCvvector_KeyPoint; cdecl;
Procedure   pCvVectorKeyPointDelete(const wrapper: PCvvector_KeyPoint); cdecl;
Function    pCvVectorKeyPointLength(const wrapper: PCvvector_KeyPoint): Integer; cdecl;
Function    pCvVectorKeyPointGet(const wrapper: PCvvector_KeyPoint; const index: Integer): PCvKeyPoint_t; cdecl;
Function    pCvVectorKeyPointSet(const wrapper: PCvvector_KeyPoint; const index: Integer; const val: PCvKeyPoint_t): PCvKeyPoint_t; cdecl;
Function    pCvVectorMatCreate(const n: Integer): PCvvector_Mat; cdecl;
Procedure   pCvVectorMatDelete(const wrapper: PCvvector_Mat); cdecl;
Function    pCvVectorMatLength(const wrapper: PCvvector_Mat): Integer; cdecl;
Function    pCvVectorMatGet(const wrapper: PCvvector_Mat; const index: Integer): PCvMat_t; cdecl;
Function    pCvVectorMatSet(const wrapper: PCvvector_Mat; const index: Integer; const val: PCvMat_t): PCvMat_t; cdecl;
Function    pCvVectorMatShapeCreate(const n: Integer): PCvvector_MatShape; cdecl;
Procedure   pCvVectorMatShapeDelete(const wrapper: PCvvector_MatShape); cdecl;
Function    pCvVectorMatShapeLength(const wrapper: PCvvector_MatShape): Integer; cdecl;
Function    pCvVectorMatShapeGet(const wrapper: PCvvector_MatShape; const index: Integer): PCvvector_int; cdecl;
Function    pCvVectorMatShapeSet(const wrapper: PCvvector_MatShape; const index: Integer; const val: PCvvector_int): PCvvector_int; cdecl;
Function    pCvVectordetail_MatchesInfoCreate(const n: Integer): PCvvector_MatchesInfo; cdecl;
Procedure   pCvVectordetail_MatchesInfoDelete(const wrapper: PCvvector_MatchesInfo); cdecl;
Function    pCvVectordetail_MatchesInfoLength(const wrapper: PCvvector_MatchesInfo): Integer; cdecl;
Function    pCvVectordetail_MatchesInfoGet(const wrapper: PCvvector_MatchesInfo; const index: Integer): PCvdetail_MatchesInfo_t; cdecl;
Function    pCvVectordetail_MatchesInfoSet(const wrapper: PCvvector_MatchesInfo; const index: Integer; const val: PCvdetail_MatchesInfo_t): PCvdetail_MatchesInfo_t; cdecl;
Function    pCvVectorPointCreate(const n: Integer): PCvvector_Point; cdecl;
Procedure   pCvVectorPointDelete(const wrapper: PCvvector_Point); cdecl;
Function    pCvVectorPointLength(const wrapper: PCvvector_Point): Integer; cdecl;
Function    pCvVectorPointGet(const wrapper: PCvvector_Point; const index: Integer): PCvPoint_t; cdecl;
Function    pCvVectorPointSet(const wrapper: PCvvector_Point; const index: Integer; const val: PCvPoint_t): PCvPoint_t; cdecl;
Procedure   pCvVectorPointToArray(const wrapper: PCvvector_Point; outvalues: PCvPointS); cdecl;
Procedure   pCvVectorPointFromArray(const wrapper: PCvvector_Point; inpvalues: PCvPointS); cdecl;
Function    pCvVectorPoint2fCreate(const n: Integer): PCvvector_Point2f; cdecl;
Procedure   pCvVectorPoint2fDelete(const wrapper: PCvvector_Point2f); cdecl;
